Get data from data source

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # The project name.
-NAME='FAR-EDGE Data Router and Preprocessor'
+NAME='FAR-EDGE Open API for Analytics'
 
 # The environment.
 # Allowed values: development, production, staging, test.
