--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "The FAR-EDGE open API for analytics.",
   "author": "Athens Information Technology <info@ait.gr>",
   "version": "1.0.0",
-  "license": "UNLICENSED",
+  "license": "Apache License v2.0",
   "main": "server.js",
   "engines": {
     "node": ">=10.1.0",
